--- a/index.html
+++ b/index.html
@@ -6,18 +6,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML CSS Demo 1</title>
   <link rel="stylesheet" href="style.css">
+  <!-- <link rel="icon" href="img/1.png" type="image/svg+xml"> -->
+
+  <link rel="shortcut icon" href="img/1.ico" type="image/x-icon">
 </head>
 
 <body>
-  <h1>
-    Hello World
-  </h1>
-  <h2>
-    Hello World
-  </h2>
-  <h6>
-    Hello World
-  </h6>
+  <div class="background"></div>
+  <header>
+    <div class="logo">My Space</div>
+    <nav>
+       <a href="#">
+        <span class="mySpan">Home</span>
+       </a>
+       <a href="#">
+        <span class="mySpan">About Me</span>
+       </a>
+       <a href="#">
+        <span class="mySpan">HTML</span>
+       </a>
+       <a href="#">
+        <span class="mySpan">CSS</span>
+       </a>
+       <a href="#">
+        <span class="mySpan">JS</span>
+       </a>
+    </nav>
+    <img class="headphoto" src="img/1.png" alt="head photo">
+  </header>
+
+  <div class="toTop">
+    <a href="#top">Top</a>
+  </div>
+  
+  <main>
+    <section></section>
+  </main>
+  <footer></footer>
 </body>
 
 </html>
