--- a/index.html
+++ b/index.html
@@ -16,31 +16,170 @@
   <header>
     <div class="logo">My Space</div>
     <nav>
-       <a href="#">
+      <a href="#">
         <span class="mySpan">Home</span>
-       </a>
-       <a href="#">
+      </a>
+      <a href="src/about.html">
         <span class="mySpan">About Me</span>
-       </a>
-       <a href="#">
+      </a>
+      <a href="#section-html">
         <span class="mySpan">HTML</span>
-       </a>
-       <a href="#">
+      </a>
+      <a href="#section-css">
         <span class="mySpan">CSS</span>
-       </a>
-       <a href="#">
+      </a>
+      <a href="#section-js">
         <span class="mySpan">JS</span>
-       </a>
+      </a>
     </nav>
     <img class="headphoto" src="img/1.png" alt="head photo">
   </header>
 
   <div class="toTop">
-    <a href="#top">Top</a>
+    <a href="#top">
+      <span>Top</span>
+    </a>
   </div>
-  
+
   <main>
-    <section></section>
+    <section class="mySection">
+      <video controls autoplay muted loop src="video/video.mp4"></video>
+
+      <audio controls loop src="audio/music.mp3"></audio>
+
+      <br>
+
+      <h1>About Html Css Javascript</h1>
+
+      <article>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora ipsam, cum dolorum ratione animi iusto
+          eveniet dignissimos atque ea alias veritatis maxime, nulla ad ab, omnis impedit voluptatem nisi pariatur.
+          Hic laudantium at voluptas, asperiores reprehenderit error quisquam accusantium? Dolorem vero, eum mollitia
+          natus quos necessitatibus odit sunt quaerat rem cupiditate rerum commodi, distinctio placeat eos consequatur.
+          Repudiandae, esse distinctio?
+          Doloribus cumque quis cupiditate maiores sequi nobis recusandae reiciendis culpa asperiores! Eius mollitia
+          nesciunt dolorem placeat voluptates eos doloribus, nemo labore fugiat accusantium provident at alias vitae ex
+          similique obcaecati!
+          Est, incidunt. Facilis sit itaque cupiditate sed fugit rerum enim expedita eveniet dicta nam maiores
+          aspernatur vel sint doloribus architecto hic minima, repellendus cumque ad quae et natus? Quisquam,
+          perferendis.
+          Sunt alias delectus ratione eligendi dolore debitis necessitatibus numquam accusantium quod. Odio libero nihil
+          nobis pariatur accusantium, consequuntur nam modi, repudiandae assumenda molestiae aliquam! Sapiente ad fugiat
+          sit excepturi explicabo.
+          Neque qui placeat tenetur ex provident at officiis fugit, veritatis vero laborum ipsa recusandae ratione
+          perferendis. Sapiente voluptatem reprehenderit culpa eius similique, aut optio! Commodi, impedit!
+          Necessitatibus a inventore voluptatibus.
+          Sed blanditiis quo explicabo odit laborum libero, ipsa sit consectetur, quasi voluptatibus officia quae amet
+          asperiores, sapiente quas necessitatibus ut possimus obcaecati delectus rerum odio inventore omnis. Eum, rem
+          quod?
+          Expedita ratione architecto, molestias cumque rem nihil at laborum alias. Eaque consectetur inventore sit?
+          Facilis dolorem in iure numquam assumenda eos sapiente quidem blanditiis vero, atque, eaque, corrupti est
+          velit!
+          Molestias dolorum ab dolor provident nemo est quam esse, alias in. Perspiciatis provident iure magnam
+          deleniti. Similique, quaerat. Omnis aut blanditiis ea nam magnam quaerat, dolor provident officia cumque
+          optio.
+        </p>
+        <h2 id="section-html">HTML</h2>
+        <p class="html">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quam, fuga! Ab iste quas officia dignissimos ducimus
+          minus numquam ea odio exercitationem ipsa ipsam, eum eaque omnis architecto ex delectus tenetur voluptas,
+          inventore minima modi incidunt suscipit. Expedita illo fugit cum, corporis corrupti odit adipisci ad possimus
+          quae minus exercitationem quidem quos odio ducimus deserunt fugiat consequuntur quod nisi quia iure eligendi
+          ut. Aliquam facere rerum optio laudantium aliquid tenetur culpa eum iusto, obcaecati magnam dolorum odio
+          cumque, deleniti ab illo id necessitatibus molestias repellendus. Minus iusto, eaque dignissimos velit optio
+          recusandae perspiciatis cum animi est rerum aperiam aut magnam. Asperiores rem quidem qui! Repellendus vel
+          nobis blanditiis? Perspiciatis aliquid soluta ea ipsa quibusdam, iusto itaque saepe aut. Iste, dignissimos
+          dolores. Eum nam quas, veritatis asperiores hic modi, quasi qui, labore natus debitis at ab laborum officia
+          laudantium alias voluptatem numquam in quo harum fuga. Quae ratione facere dolorem laudantium eum. Animi illum
+          earum consequatur, est natus reprehenderit dolore nam iure facere unde inventore, neque doloremque suscipit
+          ipsam provident quisquam itaque harum similique amet dolores sed odio asperiores. Accusamus cum vero modi
+          impedit deserunt voluptates ipsa error esse possimus eos, aperiam recusandae ratione a, nobis similique,
+          repudiandae magni voluptas debitis ut eaque sint accusantium dignissimos cumque! Dicta placeat esse, quibusdam
+          perspiciatis eligendi consequatur sapiente harum illum, quisquam, commodi ducimus repellendus distinctio
+          ullam. Quasi obcaecati libero tempore! Quis fuga, aliquam, qui veritatis doloremque fugiat unde repellendus
+          quia sit veniam voluptatem nulla autem consequatur voluptatibus laborum illum. Aspernatur quidem dignissimos
+          alias non in. Omnis porro molestiae placeat et nam quibusdam corporis non sapiente odio, quidem aliquid
+          explicabo commodi optio consequuntur cumque autem at quia dolorem vero labore. Necessitatibus, porro
+          laudantium ea magnam dolorum illum aliquid mollitia distinctio. Enim facilis totam esse voluptatibus deleniti
+          fugit dicta? Praesentium facilis adipisci, sit iste tempora ab vitae?
+        </p>
+
+        <h2 id="section-css">CSS</h2>
+        <p class="css">Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati necessitatibus neque
+          accusantium fugit
+          nemo corrupti dolor voluptatum facilis repellat, totam illo eligendi minus id ex ratione dolorem recusandae
+          laborum, sapiente aperiam accusamus beatae, architecto quae nobis. Repudiandae excepturi voluptas voluptates
+          obcaecati quam quibusdam laborum, laudantium omnis cumque dicta delectus maiores? Earum nesciunt recusandae
+          ipsa dignissimos vitae quam. Nostrum vero eum voluptatum ad sint perferendis. Tempora dolorem non voluptatem
+          veritatis, obcaecati nisi fugiat minima! Quod placeat praesentium, soluta minus asperiores earum voluptatum
+          laborum nisi officiis nam mollitia tempora! Expedita quibusdam sit earum, culpa eligendi sequi cupiditate
+          nostrum est dolore, harum temporibus aliquam voluptas velit at porro ut sed hic ad. Ut consectetur qui ex
+          quos, harum totam corporis nemo repellendus accusamus id amet quam incidunt tempora quod eveniet natus
+          voluptatem minima recusandae modi ducimus adipisci voluptate vitae. Sint accusamus laboriosam consectetur
+          mollitia perferendis, voluptatibus facilis quae quisquam tenetur perspiciatis harum tempore, iusto ipsum
+          dignissimos, dolores dolor laborum temporibus atque non optio. Eligendi, nesciunt. Placeat ipsa iure mollitia,
+          vitae quisquam eos pariatur, quo officiis rerum commodi necessitatibus facilis cupiditate tenetur quibusdam
+          accusamus nulla nobis ullam unde, provident velit minus. Excepturi rerum doloremque, porro nihil beatae
+          incidunt repellendus ducimus perspiciatis illum eveniet repellat ex magnam fugiat cumque neque? At dolore
+          quidem quod inventore eveniet quaerat rerum quo doloremque repudiandae qui consequatur minima quasi,
+          cupiditate libero! Architecto, porro quisquam in maxime consequuntur illum nam dolor fuga tempore vel
+          voluptatibus obcaecati labore temporibus iusto adipisci iure sapiente illo dicta eos mollitia. Ipsum, sunt
+          nihil. Minima deleniti cumque at incidunt, quae pariatur libero voluptatum molestiae sit ullam vel
+          necessitatibus error ipsum doloribus recusandae ea, quasi consequuntur debitis, numquam excepturi cupiditate
+          delectus expedita! Dolores dicta fugiat dolorem amet blanditiis hic, earum ducimus asperiores omnis, eum
+          quasi! Voluptates, omnis blanditiis excepturi in tenetur iusto aspernatur harum molestias, delectus pariatur
+          dolore illum sunt modi deserunt, vero aperiam doloribus sit ad unde dolores. Quibusdam excepturi cumque
+          voluptas dolorem perferendis et voluptatibus similique ea. Libero officia quod quas doloribus nihil debitis
+          inventore voluptatem sunt amet. Aut incidunt laudantium saepe quam, doloremque quas numquam. Ea, officiis ut
+          facere eligendi possimus molestiae pariatur dignissimos error quod, nesciunt sit doloremque incidunt id sunt.
+          Temporibus dolore similique atque vel. A nemo veniam impedit quia perspiciatis eveniet praesentium modi
+          doloremque repellat nobis fuga iure perferendis expedita aliquid animi deleniti aut sunt laborum veritatis,
+          debitis minus ut! Obcaecati dignissimos facere sint doloribus eius officiis officia, inventore doloremque?
+
+        </p>
+        <h2 id="section-js">JAVASCRIPT</h2>
+        <p class="javascript">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Qui totam eligendi, dolor, minima possimus quibusdam
+          neque obcaecati repellendus quaerat itaque numquam omnis deserunt vel ea ut explicabo consequuntur? Numquam,
+          error id illo quod qui quisquam laborum magni, aliquid accusantium repellendus officiis voluptates, architecto
+          corrupti autem ratione perferendis! Ex obcaecati beatae architecto, nihil modi consequatur consequuntur
+          molestiae nesciunt ipsam aperiam eligendi ducimus quasi error voluptatibus quis dicta tempora, id, nam aut
+          corporis! Assumenda ipsum delectus laudantium tempora. Nemo, dicta fuga. Culpa vero ullam fuga rem id aliquam,
+          hic praesentium laudantium. Sint officia aspernatur corrupti sit dolor! Velit sequi amet expedita optio
+          aliquid. Eligendi sapiente dolore velit, itaque excepturi placeat fugit doloribus atque, minus quia, a tempore
+          sit molestias sed id iusto error est? Illo minima perspiciatis, asperiores animi numquam neque nostrum
+          consequuntur voluptatum pariatur repellat expedita culpa harum sunt voluptates quibusdam quis possimus? Velit,
+          facilis accusantium iure porro dolorum, neque ea numquam illum veritatis similique minima tenetur tempora
+          aspernatur aliquid? Laudantium dolor at sequi. Dolore non cum aspernatur libero fuga voluptatem aperiam sunt
+          ullam, reprehenderit id vitae architecto optio tempora quaerat sapiente atque ducimus nostrum amet nemo vel
+          voluptate in sint qui ipsa. Quia modi quaerat, recusandae beatae maxime repudiandae ullam nostrum sit
+          deserunt, voluptas magni natus officia adipisci laboriosam totam architecto pariatur tempora voluptatum,
+          similique necessitatibus! Iure natus voluptate optio numquam sit tenetur nostrum dolore mollitia quia totam
+          saepe quam sint consequatur pariatur perferendis ullam harum, consectetur fuga beatae voluptatibus. Aliquid,
+          sint ipsum. Optio quis quaerat animi enim iste repellendus eos repellat consequuntur facere ratione, rem,
+          provident tenetur ipsam nemo? Fugiat animi vitae impedit doloremque maiores aut atque illo dolorem vero
+          reprehenderit facere consequatur quod architecto fuga libero, corrupti cum harum ea. Consequatur quia
+          quibusdam accusantium earum natus repellat vel optio adipisci, iure ullam nemo cumque dolores similique
+          tempora, aliquam id vitae aliquid eaque sit reprehenderit dignissimos ut delectus neque? Doloremque, ipsum
+          corrupti debitis nobis maiores fugit quisquam commodi dolorem eius dignissimos ducimus id officia aspernatur,
+          alias explicabo perspiciatis? Fugit alias, ullam nisi asperiores perferendis sit temporibus nemo recusandae
+          perspiciatis. Cupiditate minima molestias totam, nihil obcaecati in minus facilis? Voluptas architecto
+          doloremque officiis quia dolores ullam laborum distinctio voluptatem eum veritatis corrupti reiciendis tenetur
+          quisquam odit vitae amet accusantium, illum reprehenderit animi ad libero fugit quos exercitationem vel.
+          Voluptatum, repellat. Ab iusto in eveniet voluptas quas ducimus reiciendis recusandae iure laudantium ipsum?
+          Animi tempora ullam saepe ut a repellat quos veniam facere qui rem fugit magnam distinctio rerum voluptatum
+          officiis laborum, ratione, expedita ipsa iure blanditiis quis quod cumque? Earum nesciunt porro magni odit
+          inventore voluptatem? Nostrum facilis saepe minima quas officiis earum rem ut praesentium deleniti distinctio
+          vel illum, dignissimos alias maiores voluptate, ex eaque dolores eos tempora quibusdam voluptatum sunt quis!
+          Hic voluptatem, voluptates deserunt soluta corrupti possimus eligendi quasi necessitatibus ducimus, omnis vel
+          itaque perspiciatis dolor ab earum quae numquam amet maiores expedita cumque! Iste, nemo possimus, doloribus
+          eius, ex temporibus delectus accusantium similique iure officiis sapiente? Dolore fuga quasi, maxime
+          temporibus facilis a commodi ipsam illo.
+        </p>
+      </article>
+
+    </section>
   </main>
   <footer></footer>
 </body>
